--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Logs
+# --- Logs ---
 logs
 *.log
 npm-debug.log*
@@ -7,18 +7,53 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
+# --- Dependency directories ---
+node_modules/
+.pnp/
+.pnp.js
 
-# Editor directories and files
+# --- Build output ---
+dist/
+dist-ssr/
+build/
+.out/
+.next/
+
+# --- Vite specific ---
+.vite/
+
+# --- Firebase ---
+.firebase/
+firebase-debug.log
+firestore-debug.log
+firebase.json (✅ keep this *only if* you don’t want to share config)
+.firebaserc (✅ ignore this if it contains project-specific IDs)
+
+# --- Env files ---
+.env
+.env.*.local
+.env.local
+.env.development.local
+.env.production.local
+.env.test.local
+
+# --- Editor directories and OS files ---
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# --- System files ---
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# --- Misc ---
+*.local
+coverage/
+
